# last-prove

./: .gitignore  Cargo.toml  complie.bat  complie.sh  debug_map.txt
application/: Cargo.toml
application/src/: constants.const  input.rs  main.rs  mainstruct.rs  utils.rs
application/src/application/: camera.rs  click.rs  gamecontroller.rs  load.rs  mod.rs  proc_input.rs  run.rs
application/src/application/event_handler/: mod.rs
application/src/events/: input.rs  mod.rs  mouse.rs
application/src/map/: generate.rs  heightmap.rs  maphitbox.rs  mapmesh.rs  mod.rs  mouse_hover.rs  objects.rs  perlin.rs  structure.rs  tile.rs  utils.rs
constants/: Cargo.toml
constants/src/: lib.rs
eventhandler/: Cargo.toml
eventhandler/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
objects/: Cargo.toml
objects/derive/: Cargo.toml
objects/derive/src/: lib.rs
objects/derive_flags/: Cargo.toml
objects/derive_flags/src/: lib.rs
objects/src/: flags.rs  getters.rs  lib.rs  tags.rs  transformations.rs
objects/src/hitbox/: mod.rs  ray.rs
objects/src/mesh/: mod.rs  obj_triangulator.rs  primitives.rs  templates.rs
renderer/: Cargo.toml
renderer/.compiled_shaders/: frag.spv  vert.spv
renderer/.shaders/: fragment.frag  vertex.vert
renderer/src/: base.rs  data.rs  draw_setup.rs  lib.rs  renderer.rs  setup.rs  utils.rs
renderer/src/base/: mod.rs  setup.rs
renderer/src/engine/: aligned_array.rs  aligned_array_implementations.rs  lin_alg.rs  mod.rs  object_vector.rs  vector2.rs
renderer/src/resources/: buffer.rs  desriptors.rs  image.rs  mod.rs  texture.rs
renderer/src/utils/: buffer_data.rs  mod.rs  vertex.rs
resources/blender files/: basic_house.blend  mansion.blend  mansion.blend1  pine_tree.blend  pine_tree.blend1
resources/models/: Container.mtl  TyrionLikenessSculpt.mtl
shaders/: hud_vertex_shader.vert  tile_fragment_shader.frag  tile_vertex_shader.vert
src/: camera.rs  gpustoredinstances.rs  lerp.rs  lighting.rs  main.rs  perlin.rs  testplugin.rs  testscene.rs  vulkanapp.rs
src/camera/: colliders.rs  hud.rs  mod.rs
src/engine/: float.rs  mod.rs  object_vector.rs  vector2.rs
src/game/: mod.rs
src/input/: mod.rs  mouse.rs
src/map/: automata.rs  building.rs  coordinate.rs  debugmap.rs  generate.rs  heightmap.rs  mapmesh.rs  (+5 more)
(+32 files in other folders)
