[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { path = "../renderer" }
winit = "0.28.2"
simplelog = "0.12.0"
log = "0.4"
nalgebra-glm = "0.18.0"
rand = "*"
