[package]
edition = "2021"
name = "application"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nalgebra = "*"
rand = "*"
renderer = {path = "../renderer"}
objects = {path = "../objects"}
simplelog = "0.12.0"
winit = "0.28.2"
lazy_static = "1.4.0"
