[package]
edition = "2021"
name = "application"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
nalgebra = "0.32.2"
rand = "0.8.5"
renderer = { path = "../renderer" }
objects = { path = "../objects" }
macros = { path = "../macros" }
simplelog = "0.12.1"
winit = "0.28.3"
lazy_static = "1.4.0"
noise = "*"
cellular-automaton = "0.1.10"
