[package]
name = "objects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
byteorder = "*"
renderer = { path = "../renderer" }
ash = { version = "0.37.2", features = ["linked"] }
log = "0.4"
