[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2", features = ["linked"] }
ash-window = "0.12.0"
winit = "0.28.2"
raw-window-handle = "0.5.0"
log = "0.4"
simplelog = "0.12.0"
